# advent_of_code_2023

./: .gitignore
day1/: day1p1.js  day1p2.js  smol.txt
day10/: Cargo.toml  smol.txt
day10/src/: day10p1.rs  day10p2.rs
day11/: day11.sln  day11p1.cs  day11p2.cs  main.cs
day12/: day12p1.lua  day12p2.lua  input.txt
day13/: day13p1.go  day13p2.go  main.go
day14/: day14p1.zig  day14p2.zig
day15/: day15p1.adb  day15p2.adb
day16/: day16p1.py  day16p2.py
day17/: day17p1.py  day17p2.py
day18/: Cargo.toml
day18/src/: day18p1.rs  day18p2.rs
day19/: day19p1.py  day19p2.py
day2/: day2p1.js  day2p1.ts  day2p2.js  day2p2.ts  package-lock.json
day20/: day20p1.py  day20p2.py
day21/: day21p1.py  day21p2.py
day22/: day22p1.py  day22p2.py
day23/: day23p1.py  day23p2.py
day3/: day3p1.cpp  day3p2.cpp
day4/: day4p1.kt  day4p2.kt
day5/: day5p1.c  day5p2.c  input.txt  smol.txt
day6/: day6p1.hs  day6p2.hs
day7/: day7p1.java  day7p2.java
day8/: day8p1.scala  day8p2.scala  test.txt
day9/: day9p1.py  day9p2.py
