[package]
name = "day10"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day10p1"
path = "src/day10p1.rs"

[[bin]]
name = "day10p2"
path = "src/day10p2.rs"

[[bin]]
name = "oops"
path = "src/oops.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
colorize = "0.1.0"
itertools = "0.12.0"
